# AgentFly

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  README.md  install.sh  mkdocs.yml  pyproject.toml  reformat_finaldata2.py  reformat_sft_to_rl.py  reformat_viphy_data.py  rl_32b.sh  rl_32b_2.sh  rl_7b.sh  rl_7b_2.sh  rl_7b_sft_ladder.sh  rl_7b_sft_major.sh  rl_7b_sft_pass@k.sh  rl_7b_sft_pass@k_ladder.sh  rl_base_32b_qwen3_sft_single.sh  rl_base_7b.sh  rl_base_7b_deepseek_sft_multiple.sh  rl_mix_sft_7b.sh  rl_sft_7b.sh  test.sh  test_qwen3_template.py  test_run.py
.claude/: ROADMAP.md
.github/workflows/: cpu_tests.yml  docs_build.yml
agentfly/: __init__.py  cli.py  requirements.txt  verl
agentfly/agents/: __init__.py  agent_base.py  auto.py  llm_backend.py
agentfly/data/: demo_metrics.jsonl
agentfly/dockers/: build_alfworld.sh  workload_test.py
agentfly/envs/: __init__.py  alfworld_env.py  chess_env.py  env_base.py  osshell_env.py  python_env.py  redis_env.py  webshop_text_env.py
agentfly/rewards/: __init__.py  alfworld_reward.py  chess_reward.py  code_reward.py  gui_reward.py  math_reward.py  qa_reward.py  reward_base.py  scienceworld_reward.py  webshop_reward.py
agentfly/templates/: __init__.py  assistant_policy.py  templates.py  utils.py  vision_processor.py
agentfly/tools/: __init__.py  decorator.py  tool_base.py
agentfly/utils/: __init__.py  (+4 more)
agents/: .gitignore  README.md  requirements.txt  requirements_test.txt
docs/: README.md  conf.py  index.md  index.rst  requirements-docs.txt
tasks/: 001-gui-agent.md
(+712 files in other folders)
